<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Red Salud Machala</string>
    <!-- Strings used for fragments for navigation -->
    <string name="cuenta">"@RedsaludMachala"</string>

    <string name="descripcion_ambulancia">Ponemos a su disposición el <b>servicio de ambulancia </b>para
traslados secundarios, <b>dentro y fuera de la ciudad</b> a bajos costos.</string>

    <string name="descripcion_clinicas">Las clínicas móviles <b>recorren </b>los diferentes barrios de la ciudad
        <b>brindando servicios de salud</b> por un periódo de 15 días, en cada sector.
Adicional un equipo médico <b>realiza jornadas </b>en la <b>comunidad </b>durante
uno a tres días de acuerdo a la necesidad.</string>

    <string name="descripcion_cm2">Para solicitar uno de estos servicios, presentar un oficio en nuestras oficinas
    principales</string>

    <string name="descripcion_menu">"Nuestro compromiso es claro<b> brindar salud para los machaleños </b>con eficiencia y calidez"</string>
    <string name="descripcion_contactanos">Dir. Av 25 de Junio y Nueve de Mayo, 4 piso del GAD Municipal de Machala rsmmep@salñudmachala.gob.ec</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="action_registro">Registro</string>
    <string name="invalid_username">Usuario no válido</string>
    <string name="invalid_password">Contraseña debe ser >5 carateres</string>
    <string name="login_failed">"Credenciales Incorrectas"</string>
    <string-array name="tipo_medicos_array">
        <item>SELECCIONE TIPO DE MEDICO</item>
        <item>MEDICO DE PRODUCCION</item>
        <item>MEDICO FIJO</item>
    </string-array>
    <string name="token"></string>
    <string name="no_data_available">No Existen Horarios Disponibles.</string>
    <string name="redsalud" tools:ignore="StringEscaping">@SaludMachala</string>
    <string name="ovlidopassword">Olvidó Contraseña?</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>